feat: add loginpage

--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,6 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins": [
-    ["import", { "libraryName": "antd-mobile", "style": "css" }], // `style: true` 会加载 less 文件
     [
       "@babel/plugin-proposal-decorators",
       {
@@ -18,10 +17,19 @@
     [
       "import",
       {
+        "libraryName": "antd-mobile",
+        "style": "css"
+      },
+      "antd-mobile"
+    ],
+    [
+      "import",
+      {
         "libraryName": "antd",
         "libraryDirectory": "es",
         "style": "css"
-      }
+      },
+      "antd"
     ]
   ]
 }
